Version 1.8
* Python script 'vlog' added to split cal file
* Create flag table from cal file
* Use autoconf endianness detection -- remove byteorder.[ch]

Version 1.7
* support scaling parameter

Version 1.6
* Respect .flag file
* Print more information

Version 1.5
* Fix up configure.ac a bit more

Version 1.4
* Summarize tables at end
* Allow --no-model option

Version 1.3
* Amplitude scaling

Version 1.2
* Fix sign of gdelay, grate in MC table, and subtract off the atmosphere.
* FFT_SIZE fix in MC table
* Update automake a bit

Version 1.1
* Don't require .calc, .rates files

Version 1.0
* Initial version.  