@@ -13,3 +13,8 @@ make install
 After an svn update, these steps do not need to be rerun.  at most, running 
 autoreconf should be enough, but usually just "make" will update 
 everything properly.
+
+If you want to use keyin format gain curves for antennas, you must
+set environment variable GAIN_CURVE_PATH to point to a directory containing
+gain curves in keyin format.  WARNING: All files in that directory will be 
+interpretted as gain curve files!
